[gd_scene load_steps=2 format=2]

[ext_resource path="res://material_maker/widgets/render_counter/render_counter.gd" type="Script" id=1]

[node name="RenderCounter" type="HBoxContainer"]
margin_right = 170.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsCounter" type="Label" parent="."]
margin_bottom = 20.0
size_flags_vertical = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 4.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 2
size_flags_vertical = 1
max_value = 1.0
value = 1.0
percent_visible = false

[node name="Label" type="Label" parent="ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="Renderers" type="PopupMenu" parent="PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0

[node name="MaxBufferSize" type="PopupMenu" parent="PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0

[connection signal="gui_input" from="." to="." method="_on_RenderCounter_gui_input"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="id_pressed" from="PopupMenu/Renderers" to="." method="_on_Renderers_id_pressed"]
[connection signal="id_pressed" from="PopupMenu/MaxBufferSize" to="." method="_on_MaxBufferSize_id_pressed"]
